--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   json_annotation: ^4.0.1
   cached_network_image: ^3.1.0
+  flutter_riverpod: ^0.14.0+3
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
