--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/app_bar/
+    - assets/images/branches/
     - assets/data/
     - assets/images/icons/
   # An image asset can refer to one or more resolution-specific "variants", see
