--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -35,7 +35,7 @@ jobs:
         echo "APP_VERSION=$(grep -Po '(?<=version: )(.*)(?=\+)' pubspec.yaml)" >> $GITHUB_ENV
 
         flutter pub get
-        flutter pub run build_runner build
+        flutter pub run build_runner build --delete-conflicting-outputs
 
     - name: Lint and Analyze code
       run: |
