--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cached_network_image: ^3.1.0
   flutter_riverpod: ^0.14.0+3
   shared_preferences: ^2.0.8
+  expandable: ^5.0.1
 
 dev_dependencies:
   flutter_test:
