feat:add dark theme support for department screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
   assets:
     - assets/images/themes/
     - assets/images/app_bar/
+    - assets/images/department/
     - assets/data/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
