--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
   flutter_riverpod: ^0.14.0+3
   shared_preferences: ^2.0.8
   expandable: ^5.0.1
+  intl: ^0.17.0
+  firebase_core: ^1.10.6
+  cloud_firestore: ^3.1.5
+  flutterfire_ui: ^0.3.0
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
