--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,11 @@ dependencies:
   shared_preferences: ^2.0.8
   expandable: ^5.0.1
   intl: ^0.17.0
-  firebase_core: ^1.10.6
+  firebase_core: ^1.11.0
   cloud_firestore: ^3.1.5
   flutterfire_ui: ^0.3.0
   get_it: ^7.2.0
+  firebase_storage: ^10.2.5
 
 dev_dependencies:
   flutter_test:
