feat: add download file functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutterfire_ui: ^0.3.0
   get_it: ^7.2.0
   firebase_storage: ^10.2.5
+  path_provider: ^2.0.8
+  permission_handler: ^8.3.0
+  open_file: ^3.2.1
 
 dev_dependencies:
   flutter_test:
