--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -36,7 +36,7 @@ jobs:
 
         flutter pub get
 
-        echo env.FIREBASE_OPTIONS | base64 -d > lib/firebase_options.dart
+        echo "$FIREBASE_OPTIONS" | base64 -d > lib/firebase_options.dart
 
         flutter pub run build_runner build --delete-conflicting-outputs
 
