--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -11,7 +11,7 @@ on:
       - "pubspec.yaml"
 
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
   workflow_dispatch:
 
@@ -20,40 +20,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+      - uses: actions/checkout@v1
 
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '12.x'
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
 
-    - uses: subosito/flutter-action@v1
-      with:
-        channel: 'stable'
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
 
-    - name: Setup project
-      run: |
-        echo "APP_VERSION=$(grep -Po '(?<=version: )(.*)(?=\+)' pubspec.yaml)" >> $GITHUB_ENV
+      - name: Setup project
+        run: |
+          echo "APP_VERSION=$(grep -Po '(?<=version: )(.*)(?=\+)' pubspec.yaml)" >> $GITHUB_ENV
 
-        flutter pub get
+          flutter pub get
 
-        echo "$FIREBASE_OPTIONS" | base64 -d > lib/firebase_options.dart
+          echo "$FIREBASE_OPTIONS" | base64 -d > lib/firebase_options.dart
 
-        flutter pub run build_runner build --delete-conflicting-outputs
+          flutter pub run build_runner build --delete-conflicting-outputs
 
-    - name: Lint and Analyze code
-      run: |
-        flutter format --set-exit-if-changed .
-        flutter analyze .
+      - name: Lint and Analyze code
+        run: |
+          flutter format --set-exit-if-changed .
+          flutter analyze .
 
-    # - name: Run Tests
-    #   run: flutter test
+      # - name: Run Tests
+      #   run: flutter test
 
-    - name: Build debug apk
-      run: |
-        flutter build apk --debug
-        echo "Built apk for version ${APP_VERSION}"
+      - name: Build debug apk
+        run: |
+          flutter build apk --debug
+          echo "Built apk for version ${APP_VERSION}"
 
-    - uses: actions/upload-artifact@v2
-      with:
-        name: "TSEC App-nightly-v${{ env.APP_VERSION }}.apk"
-        path: build/app/outputs/flutter-apk/app-debug.apk
+      - uses: actions/upload-artifact@v2
+        with:
+          name: "TSEC App-nightly-v${{ env.APP_VERSION }}.apk"
+          path: build/app/outputs/flutter-apk/app-debug.apk
