--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  json_annotation: ^4.0.1
+  json_annotation: ^4.4.0
   cached_network_image: ^3.1.0
   url_launcher: ^6.0.12
   flutter_riverpod: ^0.14.0+3
@@ -47,8 +47,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.3
-  build_runner: ^2.1.2
-  json_serializable: ^4.1.4
+  build_runner:
+  json_serializable: ^6.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
