--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -31,12 +31,15 @@ jobs:
           channel: "stable"
 
       - name: Setup project
+        shell: bash
+        env:
+          FIREBASE_OPTIONS: ${{ secrets.FIREBASE_OPTIONS }}
         run: |
           echo "APP_VERSION=$(grep -Po '(?<=version: )(.*)(?=\+)' pubspec.yaml)" >> $GITHUB_ENV
 
           flutter pub get
 
-          echo $FIREBASE_OPTIONS | base64 -d > lib/firebase_options.dart
+          echo "$FIREBASE_OPTIONS" | base64 -di > lib/firebase_options.dart
 
           flutter pub run build_runner build --delete-conflicting-outputs
 
