--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   json_annotation: ^4.4.0
   cached_network_image: ^3.1.0
   url_launcher: ^6.0.12
-  flutter_riverpod: ^0.14.0+3
+  flutter_riverpod: ^1.0.3
   shared_preferences: ^2.0.8
   expandable: ^5.0.1
   intl: ^0.17.0
