--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.0.8
   permission_handler: ^8.3.0
   open_file: ^3.2.1
+  firebase_messaging: ^11.2.5
 
 dev_dependencies:
   flutter_test:
