--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/data/
+    - assets/data/faculty_details/
     - assets/images/themes/
     - assets/images/app_bar/
     - assets/images/branches/
