--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   permission_handler: ^8.3.0
   open_file: ^3.2.1
   firebase_messaging: ^11.2.5
+  go_router: ^3.0.1
 
 dev_dependencies:
   flutter_test:
