feat: load department about data

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   assets:
     - assets/data/
     - assets/data/faculty_details/
+    - assets/data/about_department/
     - assets/images/themes/
     - assets/images/app_bar/
     - assets/images/branches/
