--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   open_file: ^3.2.1
   firebase_messaging: ^11.2.5
   go_router: ^3.0.1
+  top_snackbar_flutter: ^1.0.2
 
 dev_dependencies:
   flutter_test:
