addition of event banner with detailed event page

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ lib/firebase_options.dart
 
 # iOS/MacOS
 ./macos/flutter/GeneratedPluginRegistrant.swift
+
+
+#google-services
+/android/app/google-services.json
