--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_messaging: ^11.4.4
   go_router: ^3.1.1
   top_snackbar_flutter: ^1.1.1
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
