added event banner and event details page

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ lib/firebase_options.dart
 
 # iOS/MacOS
 ./macos/flutter/GeneratedPluginRegistrant.swift
+
+#google-service
+/android/app/google-services.json
