--- a/firebase/firebase.json
+++ b/firebase/firebase.json
@@ -4,7 +4,8 @@
     "indexes": "firestore.indexes.json"
   },
   "functions": {
-    "predeploy": []
+    "predeploy": [],
+    "source": "functions"
   },
   "storage": {
     "rules": "storage.rules"
