--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.1.3
+  flutter_launcher_icons: ^0.11.0
+
+
+flutter_icons:
+  image_path: "assets/images/icons/tsecapplogo.png"
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
