App icon changed

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         </intent>
    </queries>
    <application
-        android:label="tsec_app"
+        android:label="Tsec App"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
