--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
    <uses-permission android:name="android.permission.READ_MEDIA._*"/>
    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+   <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+
    <queries>
         <intent>
           <action android:name="android.intent.action.VIEW" />
@@ -20,6 +22,7 @@
         android:label="Tsec App"
         android:icon="@mipmap/ic_launcher">
         <activity
+           android:requestLegacyExternalStorage="true"
             android:name=".MainActivity"
             android:launchMode="singleTop"
             android:exported="true"
