--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ firebase/
 *.ipr
 *.iws
 .idea/
-
+local.properties
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
