--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   firebase_storage: ^11.0.7
   flutter:
     sdk: flutter
- 
+  flutter_linkify: ^5.0.2
   flutter_riverpod: ^1.0.4
   flutterfire_ui: ^0.4.3+20
   get_it: ^7.2.0
