--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -25,7 +25,7 @@ Flutter/flutter_assets/
 Flutter/flutter_export_environment.sh
 ServiceDefinitions.json
 Runner/GeneratedPluginRegistrant.*
-
+ios/Podfile.lock
 # Exceptions to above rules.
 !default.mode1v3
 !default.mode2v3
