--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,11 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
+#android
+# version: 2.0.0+18
 
-version: 2.0.0+18
+#ios
+version: 1.0.2+2
 
 
 environment:
