--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ lib/firebase_options.dart
 /android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
 ios/firebase_app_id_file.json
+Session.vim
