--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,10 @@ dependencies:
   flutter_riverpod: ^1.0.4
   flutterfire_ui: ^0.4.3+20
   get_it: ^7.2.0
-  go_router: ^3.1.1
+  # go_router: ^3.1.1
+  go_router: ^11.1.2
   image_picker: ^1.0.0
-  intl: ^0.17.0
+  intl: ^0.18.1
   json_annotation: ^4.6.0
   open_file: ^3.2.1
   path_provider: ^2.0.12
