--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   # go_router: ^3.1.1
   go_router: ^11.1.2
   image_picker: ^1.0.0
-  intl: ^0.18.1
+  intl:
   json_annotation: ^4.6.0
   open_file: ^3.2.1
   path_provider: ^2.0.12
