--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,11 @@ dependencies:
   path_provider: ^2.0.12
   permission_handler: ^10.2.0
   shared_preferences: ^2.0.15
+  textfield_search: ^0.10.0
   top_snackbar_flutter: ^1.1.1
   url_launcher: ^6.1.4
+  dropdown_search: ^5.0.6
+  autocomplete_textfield: ^2.0.1
 
 dev_dependencies:
   build_runner: null
