--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   url_launcher: ^6.1.4
   dropdown_search: ^5.0.6
   autocomplete_textfield: ^2.0.1
+  animations: ^2.0.8
 
 dev_dependencies:
   build_runner: null
