--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   dropdown_search: ^5.0.6
   autocomplete_textfield: ^2.0.1
   animations: ^2.0.8
+  equatable: ^2.0.5
 
 dev_dependencies:
   build_runner: null
