--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   autocomplete_textfield: ^2.0.1
   animations: ^2.0.8
   equatable: ^2.0.5
+  dio: ^5.4.1
 
 dev_dependencies:
   build_runner: null
