--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,9 @@ dependencies:
   animations: ^2.0.8
   equatable: ^2.0.5
   dio: ^5.4.1
-  webview_flutter: ^4.7.0
-  webview_flutter_android: ^3.15.0
-  webview_flutter_wkwebview: ^3.12.0
+  # webview_flutter: ^4.7.0
+  # webview_flutter_android: ^3.15.0
+  # webview_flutter_wkwebview: ^3.12.0
 
 dev_dependencies:
   build_runner: null
