--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,7 @@ dependencies:
   webview_flutter: ^4.7.0
   webview_flutter_android: ^3.15.0
   webview_flutter_wkwebview: ^3.12.0
-  firebase_ui_firestore: ^1.6.3
+  #firebase_ui_firestore: ^1.6.3
 
 dev_dependencies:
   build_runner: null
