--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,6 +104,7 @@ flutter:
     - assets/images/tsecimage.png
     - assets/images/tsecimage2.png
     - assets/images/railwayConcession.png
+    - assets/images/devs.png
     - assets/icons/
     - assets/animation/
   # An image asset can refer to one or more resolution-specific "variants", see
