--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,7 @@ flutter:
     - assets/images/tsecimage2.png
     - assets/images/railwayConcession.png
     - assets/images/devs.png
+    - assets/images/tick2.png
     - assets/icons/
     - assets/animation/
   # An image asset can refer to one or more resolution-specific "variants", see
