--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -107,6 +107,7 @@ flutter:
     - assets/images/railwayConcession.png
     - assets/images/devs.png
     - assets/images/tick2.png
+    - assets/images/railway.png
     - assets/icons/
     - assets/animation/
   # An image asset can refer to one or more resolution-specific "variants", see
