--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   webview_flutter_wkwebview: ^3.12.0
   flutter_blurhash: ^0.6.0
   easy_stepper: ^0.8.0
+  flutter_local_notifications: ^17.2.1+1
   #firebase_ui_firestore: ^1.6.3
 
 dev_dependencies:
