--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,6 +109,7 @@ flutter:
     - assets/images/devs.png
     - assets/images/tick2.png
     - assets/images/railway.png
+    - assets/images/attendance.png
     - assets/icons/
     - assets/animation/
   # An image asset can refer to one or more resolution-specific "variants", see
