--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   easy_stepper: ^0.8.0
   flutter_local_notifications: ^17.2.1+1
   #firebase_ui_firestore: ^1.6.3
+  bcrypt: ^1.1.3
 
 dev_dependencies:
   build_runner: null
@@ -107,6 +108,7 @@ flutter:
     - assets/images/tsecimage2.png
     - assets/images/railwayConcession.png
     - assets/images/devs.png
+    - assets/images/devs-dark.png
     - assets/images/tick2.png
     - assets/images/railway.png
     - assets/images/attendance.png
