--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   flutter_local_notifications: ^17.2.1+1
   #firebase_ui_firestore: ^1.6.3
   bcrypt: ^1.1.3
+  shimmer_animation: ^2.0.0
 
 dev_dependencies:
   build_runner: null
