--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,7 +72,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: null
-  flutter_launcher_icons: ^0.11.0
+#  flutter_launcher_icons: ^0.13.1
   flutter_lints: ^1.0.3
   flutter_test:
     sdk: flutter
