--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   #firebase_ui_firestore: ^1.6.3
   bcrypt: ^1.1.3
   shimmer_animation: ^2.2.1
+  showcaseview: ^3.0.0
 
 dev_dependencies:
   build_runner: null
