--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,13 @@ android {
         jvmTarget = "21"
     }
 
+     java {
+        toolchain {
+            languageVersion.set(JavaLanguageVersion.of(21))
+        }
+    }
+
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.madclubtsec.tsec_application"
