--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,11 +41,29 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
+        coreLibraryDesugaringEnabled true
+    }
+
+    kotlinOptions {
+        jvmTarget = "21"
+    }
+
+     java {
+        toolchain {
+            languageVersion.set(JavaLanguageVersion.of(21))
+        }
+    }
+
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.madclubtsec.tsec_application"
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 30
         targetSdkVersion 34
+        namespace "com.madclubtsec.tsec_application.tsec_app"
         // versionCode flutterVersionCode.toInteger()
         // versionName flutterVersionName
         versionCode 21
@@ -80,5 +98,5 @@ dependencies {
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
 }
