--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,63 +21,63 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.2+2
 
 environment:
-  sdk: ">=2.17.0 <=4.0.0"
+  sdk: ">=3.5.4 <=4.0.0"
 
 
 dependencies:
-  showcaseview: ^3.0.0
-  cached_network_image: ^3.2.3
-  carousel_slider: ^4.1.1
-  cloud_firestore: ^4.2.0
-  cupertino_icons: ^1.0.5
-  date_picker_timeline: ^1.2.3
+  cached_network_image: ^3.4.1
+  carousel_slider: ^5.0.0
+  cloud_firestore: ^5.5.0
+  cupertino_icons: ^1.0.8
+  date_picker_timeline: ^1.2.6
   expandable: ^5.0.1
-  file_picker: ^5.3.1
-  firebase_auth: ^4.2.0
-  firebase_core: ^2.4.0
-  firebase_messaging: ^14.1.4
-  firebase_storage: ^11.0.7
+  file_picker: ^8.1.4
+  firebase_auth: ^5.3.3
+  firebase_core: ^3.8.0
+  firebase_messaging: ^15.1.5
+  firebase_storage: ^12.3.6
   flutter:
     sdk: flutter
   flutter_linkify: ^6.0.0
-  flutter_riverpod: ^1.0.4
-  get_it: ^7.2.0
+  flutter_riverpod: ^2.6.1
+  get_it: ^8.0.2
   # go_router: ^3.1.1
-  go_router: ^11.1.2
-  image_picker: ^1.0.0
-  intl: ^0.19.0
-  json_annotation: ^4.6.0
-  lottie: ^2.3.2
-  open_file: ^3.2.1
-  path_provider: ^2.1.4
-  permission_handler: ^10.2.0
-  shared_preferences: ^2.0.15
-  textfield_search: ^0.10.0
-  top_snackbar_flutter: ^1.1.1
-  url_launcher: ^6.1.4
-  dropdown_search: ^5.0.6
+  go_router: ^14.6.1
+  image_picker: ^1.1.2
+  #intl: ^0.20.0
+  json_annotation: ^4.9.0
+  lottie: ^3.1.3
+  open_file: ^3.5.10
+  path_provider: ^2.1.5
+  permission_handler: ^11.3.1
+  shared_preferences: ^2.3.3
+  textfield_search: ^0.11.1
+  top_snackbar_flutter: ^3.1.0
+  url_launcher: ^6.3.1
+  dropdown_search: ^6.0.1
   autocomplete_textfield: ^2.0.1
-  animations: ^2.0.8
-  equatable: ^2.0.5
-  dio: ^5.4.1
-  smooth_page_indicator: ^1.1.0
-  webview_flutter: ^4.7.0
-  webview_flutter_android: ^3.15.0
-  webview_flutter_wkwebview: ^3.12.0
-  flutter_blurhash: ^0.6.0
-  easy_stepper: ^0.8.0
-  flutter_local_notifications: ^17.2.1+1
+  animations: ^2.0.11
+  equatable: ^2.0.7
+  dio: ^5.7.0
+  smooth_page_indicator: ^1.2.0+3
+  webview_flutter: ^4.10.0
+  webview_flutter_android: ^4.1.0
+  webview_flutter_wkwebview: ^3.16.3
+  flutter_blurhash: ^0.8.2
+  easy_stepper: ^0.8.5+1
+  flutter_local_notifications: ^18.0.1
   #firebase_ui_firestore: ^1.6.3
   bcrypt: ^1.1.3
-  shimmer_animation: ^2.0.0
+  shimmer_animation: ^2.2.1
+  showcaseview: ^3.0.0
 
 dev_dependencies:
   build_runner: null
 #  flutter_launcher_icons: ^0.13.1
-  flutter_lints: ^1.0.3
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  json_serializable: ^6.1.3
+  json_serializable: ^6.9.0
 
 flutter_icons:
   image_path: "assets/images/icons/tsecAppIcon.png"
