--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.2+2
 
 environment:
-  sdk: ">=3.5.4 <=4.0.0"
+  sdk: ">=3.0.0 <=4.0.0"
 
 
 dependencies:
@@ -70,6 +70,7 @@ dependencies:
   bcrypt: ^1.1.3
   shimmer_animation: ^2.2.1
   showcaseview: ^3.0.0
+  badges: ^3.1.2
 
 dev_dependencies:
   build_runner: null
