--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,58 +27,58 @@ environment:
 dependencies:
   cached_network_image: ^3.4.1
   carousel_slider: ^5.0.0
-  cloud_firestore: ^5.5.0
+  cloud_firestore: ^5.6.8
   cupertino_icons: ^1.0.8
-  date_picker_timeline: ^1.2.6
+  date_picker_timeline: ^1.2.7
   expandable: ^5.0.1
-  file_picker: ^8.1.4
-  firebase_auth: ^5.3.3
-  firebase_core: ^3.8.0
-  firebase_messaging: ^15.1.5
-  firebase_storage: ^12.3.6
+  file_picker: ^10.1.9
+  firebase_auth: ^5.5.4
+  firebase_core: ^3.13.1
+  firebase_messaging: ^15.2.6
+  firebase_storage: ^12.4.6
   flutter:
     sdk: flutter
   flutter_linkify: ^6.0.0
   flutter_riverpod: ^2.6.1
-  get_it: ^8.0.2
+  get_it: ^8.0.3
   # go_router: ^3.1.1
-  go_router: ^14.6.1
+  go_router: ^15.1.2
   image_picker: ^1.1.2
   #intl: ^0.20.0
   json_annotation: ^4.9.0
-  lottie: ^3.1.3
+  lottie: ^3.3.1
   open_file: ^3.5.10
   path_provider: ^2.1.5
-  permission_handler: ^11.3.1
-  shared_preferences: ^2.3.3
+  permission_handler: ^12.0.0+1
+  shared_preferences: ^2.5.3
   textfield_search: ^0.11.1
-  top_snackbar_flutter: ^3.1.0
+  top_snackbar_flutter: ^3.3.0
   url_launcher: ^6.3.1
-  dropdown_search: ^6.0.1
+  dropdown_search: ^6.0.2
   autocomplete_textfield: ^2.0.1
   animations: ^2.0.11
   equatable: ^2.0.7
-  dio: ^5.7.0
-  smooth_page_indicator: ^1.2.0+3
-  webview_flutter: ^4.10.0
-  webview_flutter_android: ^4.1.0
-  webview_flutter_wkwebview: ^3.16.3
-  flutter_blurhash: ^0.8.2
+  dio: ^5.8.0+1
+  smooth_page_indicator: ^1.2.1
+  webview_flutter: ^4.13.0
+  webview_flutter_android: ^4.7.0
+  webview_flutter_wkwebview: ^3.22.0
+  flutter_blurhash: ^0.9.1
   easy_stepper: ^0.8.5+1
-  flutter_local_notifications: ^18.0.1
+  flutter_local_notifications: ^19.2.1
   #firebase_ui_firestore: ^1.6.3
   bcrypt: ^1.1.3
-  shimmer_animation: ^2.2.1
-  showcaseview: ^3.0.0
+  shimmer_animation: ^2.2.2
+  showcaseview: ^4.0.1
   badges: ^3.1.2
 
 dev_dependencies:
   build_runner: null
 #  flutter_launcher_icons: ^0.13.1
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
-  json_serializable: ^6.9.0
+  json_serializable: ^6.9.5
 
 flutter_icons:
   image_path: "assets/images/icons/tsecAppIcon.png"
