--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,24 +81,27 @@ android {
 
     signingConfigs {
         release {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            if (!keystoreProperties['storeFile']) {
-                throw new GradleException("storeFile is missing from keystore.properties")
+            if (keystoreProperties['storeFile']) {
+                keyAlias keystoreProperties['keyAlias']
+                keyPassword keystoreProperties['keyPassword']
+                storeFile file(keystoreProperties['storeFile'])
+                storePassword keystoreProperties['storePassword']
+            } else {
+                println("Skipping release signingConfig: storeFile missing")
             }
-            storeFile file(keystoreProperties['storeFile'])
-            storePassword keystoreProperties['storePassword']
         }
     }
 
     buildTypes {
-
         release {
-            signingConfig signingConfigs.release
+            if (keystoreProperties['storeFile']) {
+                signingConfig signingConfigs.release
+            }
             minifyEnabled true
             shrinkResources true
         }
     }
+
 }
 
 flutter {
