--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -54,19 +54,19 @@ jobs:
         run: |
           mv lib/firebase_options.example.dart lib/firebase_options.dart
 
-          echo $GOOGLE_JSON_DATA > /home/runner/work/Mobile-App/Mobile-App/android/app/google-services.json
 
-          if [["$GOOGLE_JSON_DATA" != "FAKE_GOOGLE_JSON" ]]; then
-            echo "Using Real Secrets..."
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            cp android/app/google-services.mock.json /home/runner/work/Mobile-App/Mobile-App/android/app/google-services.json
+          else
+            echo $GOOGLE_JSON_DATA > /home/runner/work/Mobile-App/Mobile-App/android/app/google-services.json
           fi
 
-          if [["$GOOGLE_JSON_DATA" == "{}" ]]; then
-            echo "Using Fake Secrets, Firebase won't work ..."
-          fi
 
           flutter pub get
 
           flutter pub run build_runner build --delete-conflicting-outputs
+
+      #      echo $GOOGLE_JSON_DATA > /home/runner/work/Mobile-App/Mobile-App/android/app/google-services.json
 
       #- name: Lint and Analyze code
       #  run: |
