--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   # go_router: ^3.1.1
   go_router: ^15.1.2
   image_picker: ^1.1.2
-  #intl: ^0.20.0
+  intl: ^0.20.0
   json_annotation: ^4.9.0
   lottie: ^3.3.1
   open_file: ^3.5.10
