--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   badges: ^3.1.2
   timeline_tile: ^2.0.0
   pie_chart: ^5.4.0
+  edge_detection_plus: ^1.0.2
 
 dev_dependencies:
   build_runner: null
