--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,7 @@ target 'Runner' do
   pod 'Firebase/Core'
   pod 'Firebase/Firestore'
   pod 'Firebase/Auth'
+  pod 'WeScan', :path => '.symlinks/plugins/edge_detection_plus/ios/WeScan-3.0.0'
 
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
@@ -42,5 +43,16 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    target.build_configurations.each do |config|
+          config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+            '$(inherited)',
+
+            ## dart: PermissionGroup.camera
+             'PERMISSION_CAMERA=1',
+
+            ## dart: PermissionGroup.photos
+             'PERMISSION_PHOTOS=1',
+          ]
+      end
   end
 end
