--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,12 +83,12 @@ android {
     signingConfigs {
         release {
             //DO NOT PUSH THE IF TO CODE BASE, ONLY FOR DEV PURPOSES.
-            if (keystoreProperties['storeFile'] != null) {
+//            if (keystoreProperties['storeFile'] != null) {
                 keyAlias keystoreProperties['keyAlias']
                 keyPassword keystoreProperties['keyPassword']
                 storeFile file(keystoreProperties['storeFile'])
                 storePassword keystoreProperties['storePassword']
-            }
+//            }
         }
     }
 
